# go_precompiles

./: Cargo.toml  build.rs  make.sh
bindings/: .gitignore  Makefile  README.md  go.mod  go.sum  lib.go  lib_test.go
src/: api.rs  lib.rs
